# ingest

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  ci_config.toml  config.sample.toml  docker-compose.telemetry.yml  docker-compose.yml  openapi.yaml
config/: ingest.local.toml  otel-collector-config.yaml  prometheus.yml
load_testing/: Dockerfile  data.jsonl  load_test.py  requirements.txt
requests/: http-client.env.json  requests.http
scripts/: build.sh  push.sh  release.sh
src/: config.rs  error.rs  event.rs  kafka.rs  lib.rs  logging.rs  main.rs  server.rs
src/event/: mod.rs  parser.rs
src/python/: mod.rs  test.rs
src/python/ncube_ingest_plugin/: __init__.py  request_processor.py
src/server/: config.rs  connection.rs  kafka.rs  mod.rs  state.rs  ws.rs
src/server/connection/: http.rs  mod.rs  ws.rs
src/server/connection/http/: mod.rs  split_newlines.rs
src/server/connection/http/split_newlines/: mod.rs  test.rs
src/server/connection/ws/: close.rs  error.rs  mod.rs
src/server/ws/: handshake.rs
tests/: http.rs  python_processors.py  server.rs  ws.rs
