[package]
name = "ingest"
version = "0.10.0"
edition = "2021"
rust-version = "1.79.0"

[dependencies]
futures = "0.3.30"
bytes = "1.6.0"
json = "0.12.4"
#actix = "0.10.0"
#actix-rt = "1.1.1"
#actix-http = "2.0.0"
actix-web = "4.8.0"
#actix-web-actors = "3.0.0"
tracing = "0.1.40"
tracing-futures = "0.2.5"
async-stream = "0.3.5"
tokio-util = "0.7.11"
num_cpus = "1.16.0"
sentry-actix = "0.34.0"
opentelemetry = "0.23.0"

[dependencies.vec1]
version =  "1.12.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.15"
features = ["signal"]

[dependencies.rdkafka]
version = "0.36.2"
features = ["ssl", "tracing"]

[dependencies.pyo3]
version = "0.19.2"

[dependencies.actix-web-opentelemetry]
#version = "0.18.0"
git = "https://github.com/ncubeanalytics/actix-web-opentelemetry.git"
branch = "metric_attrs_from_req"
features = ["metrics"]

[dependencies.serde_json]
version = "1.0.120"
features = ["preserve_order"]

[dependencies.common]
path = "vendor/common"
features = ["actix_web"]

[dev-dependencies.reqwest]
version = "0.12.5"
features = ["stream"]
