[package]
name = "ingest"
version = "0.13.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
futures = "0.3.32"
bytes = "1.11.1"
#json = "0.12.4"
#actix = "0.10.0"
#actix-rt = "1.1.1"
#actix-http = "2.0.0"
actix-web = "4.13.0"
#actix-web-actors = "3.0.0"
tracing = "0.1.44"
#tracing-futures = "0.2.5"
async-stream = "0.3.6"
tokio-util = "0.7.18"
num_cpus = "1.17.0"
sentry-actix = "0.47.0"
opentelemetry = "0.31.0"

[dependencies.vec1]
version =  "1.12.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.50.0"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.18"
features = ["signal"]

[dependencies.rdkafka]
version = "0.39.0"
features = ["ssl", "curl", "sasl", "zstd", "gssapi", "tracing"]

[dependencies.pyo3]
version = "0.19.2"

[dependencies.opentelemetry-instrumentation-actix-web]
version = "0.23.0"
features = ["metrics"]

[dependencies.serde_json]
version = "1.0.149"
features = ["preserve_order"]

[dependencies.common]
path = "vendor/common"
features = ["actix_web"]

[dev-dependencies.reqwest]
version = "0.13.2"
features = ["stream"]
